2002-12-28  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement the simpler 2-d arrays for the swig-based Java API.  This
	  means all examples work other than x09 (contours), x15 (shade plots
	  with plshade), and x16 (shade plots with plshades).

2002-12-27  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement new swig-based Java API.  Two-dimensional arrays are
	  not implemented yet which means 6 of the examples do not work,
	  but the rest do work, and in fact example 18 works completely
	  for the first time ever because all PLplot functions in the common
	  API that have variable or one-dimensional array arguments have been 
	  completely implemented in Java.

2002-12-24  Maurice LeBrun <mlebrun@users.sourceforge.net>

	* examples/tcl/x??: Added script file front-ends to Tcl example
	  programs.  Locates pltcl via PATH.
	* examples/tcl/Makefile.am: install rule for these
	
	* examples/*/Makefile.examples.in: Explicitly specify --mode=link
	  to plplot_libtool in order to correctly work with vendor compilers.

	* src/plctrl.c: Fix to 'Bug in library: Segmentation fault if "Q" hit'

2002-12-24  Alan W. Irwin <airwin@users.sourceforge.net>

	* examples/*/Makefile.examples.in: clean target

	* examples/*/Makefile.am: implement install of Makefile.examples
	  renamed to Makefile for user convenience.

	* bindings/octave/Makefile.am: implement separate creation of
	  plplot_octave.oct for build area and install area.

2002-12-23  Alan W. Irwin <airwin@users.sourceforge.net>

	* examples/*/Makefile.examples.in: use CC, CXX, and F77 symbols to
	  avoid hard-coded compiler names.

2002-12-22  Maurice LeBrun <mlebrun@users.sourceforge.net>

	* configure.ac: AM_CONFIG_HEADER must be called *before* AC_DEFINE's
	  This solves infamous -dev tk problem and also problems with
	  ./xtk?? -f tk??

2002-12-12  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement autotools support for building and installing java